tests/ui/errors/auto-impl.assoc-type.rs
#[fortuples::auto_impl]
trait Test {
    type Assoc;
}

fn main() {}
